Mon Feb 23 02:26:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): Fix the 
	allocation for the toggle button so that it actually shows up 
	in LTR list mode.

	* gtk/gtkcombobox.c (gtk_combo_box_set_column_span_column): 
	* gtk/gtkcombobox.c (gtk_combo_box_set_row_span_column): 
	* gtk/gtkcombobox.c (gtk_combo_box_set_wrap_width): Add
	notification, and avoid excessive relayouting. 

Mon Feb 23 00:38:21 2004  Matthias Clasen  <maclas@gmx.de>

	Fix bug 134982, reported by Morten Welinder:
	
	* gtk/gtkpathbar.c (gtk_path_bar_destroy): 
	* gtk/gtktooltips.c (gtk_tooltips_destroy): 
	* gtk/gtkinvisible.c (gtk_invisible_destroy): Chain up to the 
	parent's ::destroy handler.
	
	* gdk/gdkdisplay.c (gdk_display_dispose): Chain up to the 
	parent's ::dispose handler.

Sat Feb 21 19:09:55 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtksettings.c (gtk_default_substitute): Guard the FC_HINT_STYLE
	stuff with an #ifdef, so we still build with most fontconfig versions.

	* configure.in: Bump the fontconfig version requirement down to 1.0.1,
	to match pango (probably isn't needed at all, but doesn't hurt).

Sun Feb 22 03:03:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.c: (gtk_action_finalize):
	* gtk/gtkclipboard.c: (gtk_clipboard_finalize):
	* gtk/gtkentrycompletion.c: (gtk_entry_completion_class_init),
	(gtk_entry_completion_finalize):
	* gtk/gtkfilechooserwidget.c: (gtk_file_chooser_widget_finalize):
	* gtk/gtkfilesystemmodel.c: (gtk_file_system_model_class_init),
	(gtk_file_system_model_finalize):
	* gtk/gtkicontheme.c: (gtk_icon_theme_class_init),
	(gtk_icon_theme_finalize):
	* gtk/gtktextchild.c: (gtk_text_child_anchor_finalize):
	* gtk/gtkuimanager.c: (gtk_ui_manager_class_init),
	(gtk_ui_manager_finalize):
	* modules/input/gtkimcontextxim.c: (gtk_im_context_xim_finalize):
	Add chains to the parent's ::finalize() handler  (#134901, Morten Welinder,
	patch by Jan Arne Petersen)
